# MovieTools

./: .gitignore  README.md  downloaded.sbv  pyproject.toml  result.txt  setup.cfg
src/movie_tools/closed_captions/: captions.sbv  main.py  translator.py  youtube.py
src/movie_tools/exchange_rate/: imaging.py  main.py  oxr_client.py  rate.py
src/movie_tools/imaging/: imaging.py
